Bug 443466 - Can't repeat play by hand
Summary: Can't repeat play by hand
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.7.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-08 09:01 UTC by Luigi Baldoni
Modified: 2021-10-31 07:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luigi Baldoni 2021-10-08 09:01:23 UTC
SUMMARY
Can't replay a file once it has ended

STEPS TO REPRODUCE
1. Open a media file
2. Play it until the end
3. Click on Play/Pause or drag the position slider back

OBSERVED RESULT
No effect

EXPECTED RESULT
The file to be playable anew.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.3
KDE Plasma Version: 5.18.6
KDE Frameworks Version: 5.76.0
Qt Version: 5.12.7

ADDITIONAL INFORMATION
Ideally there should be an extra "Stop" button as in other players.
Comment 1 Gabriel 2021-10-15 15:43:03 UTC
Can confirm the issue after disabling "Auto load videos…" and "Repeat".
Comment 2 george fb 2021-10-28 16:50:22 UTC
Git commit 6f2a0d8d68fbbb4887b56431355112a04ff50f89 by George Florea Bănuș.
Committed on 28/10/2021 at 16:44.
Pushed by georgefb into branch 'master'.

fix: keep file loaded after reaching end of file

M  +1    -0    src/mpvobject.cpp

https://invent.kde.org/multimedia/haruna/commit/6f2a0d8d68fbbb4887b56431355112a04ff50f89
Comment 3 Luigi Baldoni 2021-10-28 18:33:22 UTC
No change. Do I need to do more than deleting ~/.cache after install?
Comment 4 george fb 2021-10-28 20:11:07 UTC
It works when you change the position (progress bar or seek action), but there are other issues too so I'm reopening.
Comment 5 Luigi Baldoni 2021-10-29 07:53:47 UTC
If I play a file to the end, the play button doesn't do a thing after that.
Comment 6 george fb 2021-10-31 07:29:54 UTC
Git commit 8190c049271336880d8264ee4850bdc5c15b1739 by George Florea Bănuș.
Committed on 31/10/2021 at 07:24.
Pushed by georgefb into branch 'master'.

feat(mpv): keep file loaded after eof is reached

When playlist repeat is turned off and last file in the playlist
reaches end of file, reload the file and pause the player

M  +15   -0    src/qml/MpvVideo.qml
M  +3    -0    src/qml/main.qml

https://invent.kde.org/multimedia/haruna/commit/8190c049271336880d8264ee4850bdc5c15b1739