fix: keep file loaded after reaching end of file

BUG: 443466